--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
 group = 'me.Ledovec'
 version = '1.0-SNAPSHOT'
 
+compileJava.options.encoding = 'UTF-8'
+
 repositories {
     mavenCentral()
     maven {
@@ -21,6 +23,7 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
 
 def targetJavaVersion = 8
