--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ compileJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    maven {
+        name "jitpack.io"
+        url 'https://jitpack.io'
+    }
     maven {
         name = 'spigotmc-repo'
         url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
@@ -28,6 +31,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compileOnly 'org.mongodb:mongodb-driver-reactivestreams:4.1.1'
 }
 
 def targetJavaVersion = 8
